# webhook-rescue-kit

./: .gitignore  LICENSE  README.md  buyers_webhook_rescue.csv  pyproject.toml
.github/workflows/: tests.yml
docs/: client-scope-notes.md  credit-ledger-boundary.md  framework-patch-examples.md  paid-pilot.md
outputs/: example_recovery_report.md
samples/: shopify_failed_orders.json  stripe_duplicate_events.json  subscription_desync.json
src/webhook_rescue/: __init__.py  cli.py  credit_ledger.py  demo.py  ingest.py  models.py  replay.py  report.py  store.py  utils.py
tests/: test_credit_ledger.py  test_idempotency.py  test_ingest.py  test_replay.py  test_report.py
