[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-rescue-kit"
version = "0.1.0"
description = "Local proof asset for Stripe and Shopify webhook failure recovery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
webhook-rescue = "webhook_rescue.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
